--- a/keyboard.css
+++ b/keyboard.css
@@ -6,7 +6,7 @@
 @import url('keyboard-modifier-keys.css');
 @import url('keyboard-special-chars.css');
 @import url('keyboard-navigation.css');
-@import url('keyboard-case.css');
 @import url('keyboard-control.css');
 @import url('keyboard-responsive.css');
 @import url('keyboard-browser-compatibility.css');
+@import url('keyboard-draggable.css');
